--- a/translations/kangyur/translations/066-009_toh251-the_sutra_on_four_precepts.xml
+++ b/translations/kangyur/translations/066-009_toh251-the_sutra_on_four_precepts.xml
@@ -15,6 +15,7 @@
                                 <!--<title type="mainTitle" xml:lang="en">The Sūtra on Four Precepts</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">caturdharmakasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">chos bzhi pa’i mdo/</title>-->
+                                <title type="shortcode" xml:lang="en">T251</title>
                                 <author role="translatorMain" xml:id="UT22084-066-009-79">Translated by Adam
                                         Pearcey<lb/>under the patronage and supervision of 84000:
                                         Translating the Words of the Buddha</author>
@@ -31,7 +32,7 @@
                                         Cotter</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.1.2 <date>2023</date>
+                <edition>v 1.0.0 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -40,7 +41,7 @@
                                         is a global non-profit initiative to translate all the
                                         Buddha’s words into modern languages, and to make them
                                         available to everyone. </publisher>
-                <availability status="2">
+                <availability status="1.a">
                                         <licence>
                                                 <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                                                 <p>This work is provided under the protection of a
@@ -56,7 +57,7 @@
                 <note>An early mistake in the assigning of UT numbers within the
                                         84000 project means that these ids diverge slightly from the
                                         standard logic.</note>
-                <date>2023-08-22</date>
+                <date>2023-08-14</date>
             </publicationStmt>
                         <sourceDesc>
                                 <bibl key="toh251" type="text">
@@ -177,6 +178,12 @@
                 <change who="#john" when="2023-08-12T18:26:08.69Z" type="text-version" status="0.1.2" xml:id="UT22084-066-009-264">
                     <desc>Further edits to link to Toh 3990.</desc>
                 </change>
+                <change who="#martina-cotter" when="2023-08-14T21:27:21.058Z" type="translation-status" status="1.a" xml:id="UT22084-066-009-265">
+                    <desc>1.a</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-08-14T21:27:21.058Z" type="text-version" status="1.0.0" xml:id="UT22084-066-009-266">
+                    <desc>First published version</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
         </teiHeader>
@@ -272,7 +279,7 @@ sūtra</title>) is
                                         <milestone unit="chunk" xml:id="UT22084-066-009-7"/>
                                         <p tid="11">The Buddha presents these four factors using
                                                 this formula: “For as long as they live,
-                                                bodhisattvas, great beings, do not abandon
+                                                bodhisattvas, great beings, should not abandon
                                                   <distinct>x</distinct> even at the cost of their
                                                 lives.” This is repeated in six successive lines,
                                                 first to introduce all four factors together, then
@@ -300,7 +307,7 @@ sūtra</title>) is
                                                         <foreign xml:lang="Zh-Ltn">Dasheng si fa jing</foreign> <foreign xml:lang="zh">大乘四法經</foreign> (<foreign xml:lang="Sa-Ltn">Caturdharmaka­sūtra</foreign>), Taishō 772 (<ref target="https://cbetaonline.dila.edu.tw/en/T0772">CBETA</ref>; <ref target="https://21dzk.l.u-tokyo.ac.jp/SAT2018/T0772.html">SAT</ref>).</note> &amp; Taishō 773<note place="end" xml:id="UT22084-066-009-17">
                                                           <foreign xml:lang="Zh-Ltn">Fo shuo pusa xiuxing si fa jing</foreign>
                                                                 <foreign xml:lang="zh">佛說菩薩修行四法經</foreign> (<foreign xml:lang="Sa-Ltn">Catur­dharmaka­­sūtra</foreign>), Taishō
-                                                  773 ( <ref target="https://cbetaonline.dila.edu.tw/en/T0773">CBETA</ref>; <ref target="https://21dzk.l.u-tokyo.ac.jp/SAT2018/T0773.html">SAT</ref>).</note>), both by Divākara and dated
+                                                  773 (<ref target="https://cbetaonline.dila.edu.tw/en/T0773">CBETA</ref>; <ref target="https://21dzk.l.u-tokyo.ac.jp/SAT2018/T0773.html">SAT</ref>).</note>), both by Divākara and dated
                                                 to 680 <hi rend="small-caps">ce</hi> and 681 <hi rend="small-caps">ce</hi>.<note place="end" xml:id="UT22084-066-009-18"> See Skilling (2021),
                                                   pp. 200–1.</note> The sūtra and commentaries also
                                                 appear in several manuscripts of the Dunhuang
@@ -408,19 +415,19 @@ sūtra</title>) is
                                                 Blessed One addressed the monks: </p>
                                         <milestone unit="chunk" xml:id="UT22084-066-009-30"/>
                                         <p tid="27">“Monks, for as long as they live, bodhisattvas,
-                                                great beings, do not abandon four factors even at
+                                                great beings, should not abandon four factors even at
                                                 the cost of their lives. What are these four? </p>
                                         <milestone unit="chunk" xml:id="UT22084-066-009-31"/>
                                         <p tid="28">“Monks, for as long as they live, bodhisattvas,
-                                                great beings, do not abandon the thought of
+                                                great beings, should not abandon the thought of
                                                 awakening even at the cost of their lives.</p>
                                         <milestone unit="chunk" xml:id="UT22084-066-009-32"/>
                                         <p tid="29">“Monks, for as long as they live, bodhisattvas,
-                                                great beings, do not abandon the spiritual friend
+                                                great beings, should not abandon the spiritual friend
                                                 even at the cost of their lives.</p>
                                         <milestone unit="chunk" xml:id="UT22084-066-009-33"/>
                                         <p tid="30">“Monks, for as long as they live, bodhisattvas,
-                                                great beings, do not abandon tolerance and lenience
+                                                great beings, should not abandon tolerance and lenience
                                                 even at the cost of their lives.<note place="end" xml:id="UT22084-066-009-34"> According to
                                                   Jñānadatta’s commentary, tolerance (<foreign xml:lang="Sa-Ltn" type="term">kṣanti</foreign>;
                                                   <foreign xml:lang="Bo-Ltn" type="term">bzod
@@ -434,7 +441,7 @@ sūtra</title>) is
                     </p>
                                         <milestone unit="chunk" xml:id="UT22084-066-009-35"/>
                                         <p tid="31">“Monks, for as long as they live, bodhisattvas,
-                                                great beings, do not abandon dwelling in the
+                                                great beings, should not abandon dwelling in the
                                                 wilderness<note place="end" xml:id="UT22084-066-009-135">Dwelling in the
                                                         wilderness is also one of the twelve ascetic practices 
                                                         (<foreign xml:lang="Sa-Ltn">dhūtaguṇa</foreign>). Note that related to 
@@ -449,7 +456,7 @@ sūtra</title>) is
                                                         and <foreign xml:lang="Sa-Ltn">araṇya</foreign>.</note> even at the cost of their lives.</p>
                                         <milestone unit="chunk" xml:id="UT22084-066-009-36"/>
                                         <p tid="32">“Monks, for as long as they live, bodhisattvas,
-                                                great beings, do not abandon these four factors even
+                                                great beings, should not abandon these four factors even
                                                 at the cost of their lives.”</p>
                                         <milestone unit="chunk" xml:id="UT22084-066-009-37"/>
                                         <p tid="33">The Blessed One spoke these words, and once the
