--- a/translations/tengyur/publications/113-010_toh3990-aryacaturdharmakavyakhyana.xml
+++ b/translations/tengyur/publications/113-010_toh3990-aryacaturdharmakavyakhyana.xml
@@ -26,7 +26,7 @@
                                         Cotter</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.1.3 <date>2023</date>
+                <edition>v 1.0.0 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -35,7 +35,7 @@
                                         is a global non-profit initiative to translate all the
                                         Buddha’s words into modern languages, and to make them
                                         available to everyone. </publisher>
-                <availability status="2">
+                <availability status="1.a">
                                         <licence>
                                                 <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                                                 <p>This work is provided under the protection of a
@@ -51,7 +51,7 @@
                 <note>An early mistake in the assigning of UT numbers within the
                                         84000 project means that these ids diverge slightly from the
                                         standard logic.</note>
-                <date>2023-08-22</date>
+                <date>2023-08-14</date>
             </publicationStmt>
                         <sourceDesc>
                                 <bibl key="toh3990" type="text">
@@ -65,6 +65,7 @@
                                         <idno parent-id="O1JC76301JC10651" work="http://read.84000.co/sections"/>
                                         <idno source-id="O1JC76301JC10662" work="W23703"/>
                                 </bibl>
+                                <link type="isCommentaryOf" target="toh251"/>
                         </sourceDesc>
                         <notesStmt/>
                     <revisionDesc>
@@ -193,6 +194,12 @@
                 </change>
                 <change who="#john" when="2023-08-14T13:08:29.063Z" type="text-version" status="0.1.3" xml:id="UT23703-113-010-248">
                     <desc>Further edits to notes and bibliography.</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-08-14T21:31:25.496Z" type="translation-status" status="1.a" xml:id="UT23703-113-010-250">
+                    <desc>1.a</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-08-14T21:31:25.496Z" type="text-version" status="1.0.0" xml:id="UT23703-113-010-251">
+                    <desc>First published version</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -349,9 +356,10 @@
                                         <p tid="20">
                         <ref cRef="F.66.a" type="folio" xml:id="UT23703-113-010-57"/> Homage to the youthful Mañjuśrī!</p>
                                         <lb/>
-                                        <p tid="23">This sūtra explains that for as long as they
-                                                live bodhisattvas, great beings, should not abandon
-                                                four factors even at the cost of their lives. For
+                                        <p tid="23">This sūtra explains that <q type="inline">
+                            <ptr type="quote-ref" rend="substring" target="#UT22084-066-009-30" xml:id="UT23703-113-010-249"/>for as long as they
+                                                live, bodhisattvas, great beings, should not abandon
+                                                four factors even at the cost of their lives.</q> For
                                                 what purpose was it undertaken? It was undertaken
                                                 for the purpose of giving an explanation to those
                                                 who have embarked upon the Great Vehicle and might
