--- a/translations/kangyur/placeholders/066-006_toh248-the_sutra_on_how_to_establish_the_four_features_of_bodhisattvas_individual_liberation.xml
+++ b/translations/kangyur/placeholders/066-006_toh248-the_sutra_on_how_to_establish_the_four_features_of_bodhisattvas_individual_liberation.xml
@@ -9,18 +9,19 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">byang sems sor thar chos bzhi sgrub pa'i mdo/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">bodhisattvapratimokṣa­catuṣkanirhāra­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">byang chub sems dpa'i so sor thar pa chos bzhi sgrub pa zhes bya ba theg pa chen po'i mdo</title>
-                <author role="translatorMain" ref="eft:team-9"/>
-                <author role="translatorEng" ref="eft:person-66">Joseph Mark McClellan</author>
-                <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
-                <editor role="reviser" ref="eft:person-59">Benjamin Collet-Cassart</editor>
-                <consultant role="dharmaMaster" ref="eft:person-40">Chokyi Nyima Rinpoche</consultant>
-                <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
+                <author role="translatorMain" xml:id="UT22084-066-006-1"/>
+                <author role="translatorEng" xml:id="UT22084-066-006-2">Joseph Mark McClellan</author>
+                <consultant role="projectManager" xml:id="UT22084-066-006-3">Andreas Doctor</consultant>
+                <editor role="reviser" xml:id="UT22084-066-006-4">Benjamin Collet-Cassart</editor>
+                <consultant role="dharmaMaster" xml:id="UT22084-066-006-5">Chokyi Nyima Rinpoche</consultant>
+                <editor role="projectEditor" xml:id="UT22084-066-006-6">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2020</date>
+                <edition>v 0.0.12 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.c">
+            <publicationStmt>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-066-006"/>
                 <date/>
             </publicationStmt>
@@ -35,25 +36,66 @@
                     <idno source-id="O1JC114941JC11900" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-21T07:05:42.152Z" user="admin">21/04/2023 07:05:42</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2020-04-22T10:06:19.772Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2021-01-04T12:20:56.718Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2021-01-04T12:20:56.718Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2021-01-04T12:21:37.128Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2021-01-04T12:21:49.642Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2022-09-01T15:37:43.857Z" user="line-tofte">2.g</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2022-09-01T15:37:43.857Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2022-09-01T15:38:25.334Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.f" date-time="2022-10-13T13:22:50.398Z" user="line-tofte">2.f</note>
-                <note type="updated" update="text-version" value="0.0.7" date-time="2022-10-13T13:22:50.398Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="2.e" date-time="2022-12-07T15:08:43.943Z" user="line-tofte">2.e</note>
-                <note type="updated" update="text-version" value="0.0.8" date-time="2022-12-07T15:08:43.943Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="2.d" date-time="2022-12-16T08:30:03.662Z" user="line-tofte">2.d</note>
-                <note type="updated" update="text-version" value="0.0.9" date-time="2022-12-16T08:30:03.662Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="2.c" date-time="2023-04-21T07:05:37.894Z" user="line-tofte">2.c</note>
-                <note type="updated" update="text-version" value="0.0.10" date-time="2023-04-21T07:05:37.894Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2020-04-22T10:06:19.772Z" type="text-version" status="0.0.1" xml:id="UT22084-066-006-7">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2021-01-04T12:20:56.718Z" type="translation-status" status="2.h" xml:id="UT22084-066-006-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2021-01-04T12:20:56.718Z" type="text-version" status="0.0.2" xml:id="UT22084-066-006-9">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-01-04T12:21:37.128Z" type="text-version" status="0.0.3" xml:id="UT22084-066-006-10">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-01-04T12:21:49.642Z" type="text-version" status="0.0.4" xml:id="UT22084-066-006-11">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-09-01T15:37:43.857Z" type="translation-status" status="2.g" xml:id="UT22084-066-006-12">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2022-09-01T15:37:43.857Z" type="text-version" status="0.0.5" xml:id="UT22084-066-006-13">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-09-01T15:38:25.334Z" type="text-version" status="0.0.6" xml:id="UT22084-066-006-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-10-13T13:22:50.398Z" type="translation-status" status="2.f" xml:id="UT22084-066-006-15">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2022-10-13T13:22:50.398Z" type="text-version" status="0.0.7" xml:id="UT22084-066-006-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-07T15:08:43.943Z" type="translation-status" status="2.e" xml:id="UT22084-066-006-17">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-07T15:08:43.943Z" type="text-version" status="0.0.8" xml:id="UT22084-066-006-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T08:30:03.662Z" type="translation-status" status="2.d" xml:id="UT22084-066-006-19">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2022-12-16T08:30:03.662Z" type="text-version" status="0.0.9" xml:id="UT22084-066-006-20">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-21T07:05:37.894Z" type="translation-status" status="2.c" xml:id="UT22084-066-006-21">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-21T07:05:37.894Z" type="text-version" status="0.0.10" xml:id="UT22084-066-006-22">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.11" xml:id="UT22084-066-006-23">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-15T08:39:52.6Z" type="translation-status" status="2.a" xml:id="UT22084-066-006-24">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-15T08:39:52.6Z" type="text-version" status="0.0.12" xml:id="UT22084-066-006-25">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
