--- a/translations/kangyur/placeholders/066-014_toh256-the_seal_of_the_dharma.xml
+++ b/translations/kangyur/placeholders/066-014_toh256-the_seal_of_the_dharma.xml
@@ -11,10 +11,11 @@
                 <title type="otherTitle" xml:lang="en">The Seal of the Dharma: the Ten Chapters of the Explanation by Buddha Vairocana of the State of Mind of Bodhisattvas</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.2 <date>2021</date>
+                <edition>v 0.0.4 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt>
+                <availability status=""/>
                 <idno xml:id="UT22084-066-014"/>
                 <date/>
             </publicationStmt>
@@ -29,10 +30,27 @@
                     <idno source-id="O1JC114941JC11908" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-20T13:56:55.003Z" user="admin">20/07/2023 13:56:55</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-05-25T15:17:18.489Z" user="john">0.0.1</note>    <note type="updated" update="translation-status" value="4" date-time="2023-07-20T13:56:50.694Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2023-07-20T13:56:50.694Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#john" when="2021-05-25T15:17:18.489Z" type="text-version" status="0.0.1" xml:id="UT22084-066-014-1">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-20T13:56:50.694Z" type="translation-status" status="4" xml:id="UT22084-066-014-2">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-20T13:56:50.694Z" type="text-version" status="0.0.2" xml:id="UT22084-066-014-3">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT22084-066-014-4">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-15T09:31:41.312Z" type="translation-status" status="" xml:id="UT22084-066-014-5">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2023-08-15T09:31:41.312Z" type="text-version" status="0.0.4" xml:id="UT22084-066-014-6">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
