--- a/translations/kangyur/translations/072-011_toh311-the_sutra_teaching_the_eleven_perceptions.xml
+++ b/translations/kangyur/translations/072-011_toh311-the_sutra_teaching_the_eleven_perceptions.xml
@@ -17,7 +17,7 @@
                                         gcig bstan pa’i mdo</title>
                                 <title type="longTitle" xml:lang="bo">འཕགས་པ་འདུ་ཤེས་བཅུ་གཅིག་བསྟན་པའི་མདོ།</title>
                                 <author role="translatorMain" xml:id="UT22084-072-011-66">Translated
-                                        by the Sakya Pandita Translation Group<lb/>under the
+                                        by Nathaniel Rich and the Sakya Pandita Translation Group<lb/>under the
                                         patronage and supervision of 84000: Translating the Words of
                                         the Buddha</author>
                                 <editor role="externalReviewer" xml:id="UT22084-072-011-67">Paul
@@ -41,7 +41,7 @@
                                         Damron</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.4 <date>2023</date>
+                <edition>v 1.0.5 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -193,6 +193,9 @@
                                 </change>
                 <change who="#martina-cotter" when="2023-08-09T15:13:36.603Z" type="text-version" status="1.0.4" xml:id="UT22084-072-011-113">
                     <desc>Updated acknowledgements.</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-08-15T22:17:09.069Z" type="text-version" status="1.0.5" xml:id="UT22084-072-011-114">
+                    <desc>updated tranlators.</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
