--- a/translations/kangyur/placeholders/101-147_toh1091-in_praise_of_the_goddess_raivati.xml
+++ b/translations/kangyur/placeholders/101-147_toh1091-in_praise_of_the_goddess_raivati.xml
@@ -7,14 +7,16 @@
                 <title type="mainTitle" xml:lang="en">In Praise of the Goddess Raivatī</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">lha mo nam gru la bstod pa/</title>
-                <author role="translatorMain" ref="eft:team-55"/>
-                <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
+                <author role="translatorMain" xml:id="UT22084-101-147-1"/>
+                <author role="translatorEng" xml:id="UT22084-101-147-2">Catherine Dalton</author>
+                <editor role="projectEditor" xml:id="UT22084-101-147-3">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2022</date>
+                <edition>v 0.0.7 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.g">
+            <publicationStmt>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-101-147"/>
                 <date/>
             </publicationStmt>
@@ -29,9 +31,42 @@
                     <idno source-id="O1JC114941JC12855" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-17T11:59:01.582Z" user="admin">17/04/2023 11:59:01</note>    <note type="updated" update="translation-status" value="3" date-time="2022-04-13T13:03:14.984Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-04-13T13:03:14.984Z" user="line-tofte">0.0.1</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-13T13:03:37.757Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-04-22T11:25:05.064Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-04-22T11:25:05.064Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-04-17T11:58:57.335Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2023-04-17T11:58:57.335Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2022-04-13T13:03:14.984Z" type="translation-status" status="3" xml:id="UT22084-101-147-4">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-04-13T13:03:14.984Z" type="text-version" status="0.0.1" xml:id="UT22084-101-147-5">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2022-04-13T13:03:37.757Z" type="text-version" status="0.0.2" xml:id="UT22084-101-147-6">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-04-22T11:25:05.064Z" type="translation-status" status="2.h" xml:id="UT22084-101-147-7">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2022-04-22T11:25:05.064Z" type="text-version" status="0.0.3" xml:id="UT22084-101-147-8">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-17T11:58:57.335Z" type="translation-status" status="2.g" xml:id="UT22084-101-147-9">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-17T11:58:57.335Z" type="text-version" status="0.0.4" xml:id="UT22084-101-147-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-17T11:59:28.283Z" type="text-version" status="0.0.5" xml:id="UT22084-101-147-11">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.6" xml:id="UT22084-101-147-12">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-16T09:31:22.801Z" type="translation-status" status="2.f" xml:id="UT22084-101-147-13">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-16T09:31:22.801Z" type="text-version" status="0.0.7" xml:id="UT22084-101-147-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
