--- a/translations/kangyur/translations/063-001_toh220-eliminating_those_with_corrupted_discipline.xml
+++ b/translations/kangyur/translations/063-001_toh220-eliminating_those_with_corrupted_discipline.xml
@@ -40,7 +40,7 @@
                                 <editor role="projectEditor" xml:id="UT22084-063-001-8135">John Canti</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.2.10 <date>2023</date>
+                <edition>v 1.2.11 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -278,6 +278,9 @@
                 </change>
                 <change who="#sameer" when="2023-08-03T04:36:41.032Z" type="text-version" status="1.2.10" xml:id="UT22084-063-001-8198">
                     <desc>Available in App v. 3.3</desc>
+                </change>
+                <change who="#john" when="2023-08-16T22:15:00.219Z" type="text-version" status="1.2.11" xml:id="UT22084-063-001-8199">
+                    <desc>Further improvements</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -1069,7 +1072,7 @@
                                                 characteristics, unconditioned, and impossible to teach is
                                                 truly astonishing!”</p>
                                         <tei:milestone unit="chunk" xml:id="UT22084-063-001-83"/>
-                                        <trailer tid="73">This was chapter one, “The Setting.”</trailer>
+                                        <trailer tid="73">This was Chapter One, “The Setting.”</trailer>
                                 </div>
                                 <div type="chapter" xml:id="UT22084-063-001-chapter-2">
                                         <head type="chapter" tid="596">Chapter Two</head>
@@ -1286,9 +1289,9 @@
                                                 that one can speak of the absence of distinguishing marks.
                                                 Śāriputra, I have taught that the slightest belief in
                                                 distinguishing marks or apprehending of distinguishing marks is a wrong
-                                                view. Why is that? Śāriputra, in the Dharma-Vinaya, even to apprehend something as peace is
-                                                wrong—let alone to make designations, let alone to make designations for things,
-                                                let alone to make a designation for that.</p>
+                                                view. Why is that? Śāriputra, if it is wrong even to apprehend this Dharma-Vinaya as 
+                                                being at peace, is it not worse to so designate it, designate it as something,
+                                                or have something as its designation?</p>
                                         <tei:milestone unit="chunk" xml:id="UT22084-063-001-97"/>
                                         <p tid="88">“Śāriputra, why do the blessed ones teach so
                                                 extensively that designations are
@@ -1389,7 +1392,7 @@
                                                 to have no thoughts, and to be without grasping is therefore referred to as
                                                   <distinct>recollecting the Buddha</distinct>.” </p>
                                         <tei:milestone unit="chunk" xml:id="UT22084-063-001-103"/>
-                                        <trailer tid="93">This was chapter two, “The Teaching on
+                                        <trailer tid="93">This was Chapter Two, “The Teaching on
                                                 Recollection.” <tei:ref cRef="B2" type="bampo"/>
                     </trailer>
                                 </div>
@@ -1603,7 +1606,7 @@
                                                 are dismissed, and all conventions are annihilated, 
                                                 for such is the Dharma of the mendicants.”</p>
                                         <tei:milestone unit="chunk" xml:id="UT22084-063-001-128"/>
-                                        <trailer tid="115">This was chapter three, “The Virtuous
+                                        <trailer tid="115">This was Chapter Three, “The Virtuous
                                                 Friend.”</trailer>
                                 </div>
                                 <div type="chapter" xml:id="UT22084-063-001-chapter-4">
@@ -2220,7 +2223,7 @@
                                                 about this Dharma-Vinaya. They are known as the
                                                   <distinct>noble Saṅgha</distinct>.”</p>
                                         <tei:milestone unit="chunk" xml:id="UT22084-063-001-168"/>
-                                        <trailer tid="153">This was chapter four, “The Noble Saṅgha.”
+                                        <trailer tid="153">This was Chapter Four, “The Noble Saṅgha.”
                                                 <tei:ref cRef="B3" type="bampo"/>
                     </trailer>
                                 </div>
@@ -3639,7 +3642,7 @@
                                                 violated discipline of monks who violate their discipline. They will complete the conditions to be
                                                 reborn in the lower realms.” </p>
                                         <tei:milestone unit="chunk" xml:id="UT22084-063-001-265"/>
-                                        <trailer tid="240">This was chapter five, “Violated
+                                        <trailer tid="240">This was Chapter Five, “Violated
                                                 Discipline.”</trailer>
                                 </div>
                                 <div type="chapter" xml:id="UT22084-063-001-chapter-6">
@@ -4103,7 +4106,7 @@
                                                 an impure Dharma. They will complete the conditions
                                                 to be reborn in the lower realms.” </p>
                                         <tei:milestone unit="chunk" xml:id="UT22084-063-001-310"/>
-                                        <trailer tid="283">This was chapter six, “Teaching an Impure
+                                        <trailer tid="283">This was Chapter Six, “Teaching an Impure
                                                 Dharma.”</trailer>
                                 </div>
                                 <div type="chapter" xml:id="UT22084-063-001-chapter-7">
@@ -4690,7 +4693,7 @@
                                                 is the unsurpassed and perfect awakening of the
                                                 thus-gone ones.”</p>
                                         <tei:milestone unit="chunk" xml:id="UT22084-063-001-346"/>
-                                        <trailer tid="318">This was chapter seven, “Connections to
+                                        <trailer tid="318">This was Chapter Seven, “Connections to
                                                 Previous Lives.”</trailer>
                                 </div>
                                 <div type="chapter" xml:id="UT22084-063-001-chapter-8">
@@ -4919,7 +4922,7 @@
                                                 who appeared in these places during those times were
                                                 someone else. </p>
                                         <tei:milestone unit="chunk" xml:id="UT22084-063-001-367"/>
-                                        <trailer tid="340">This was chapter eight, “Honoring, Respecting,
+                                        <trailer tid="340">This was Chapter Eight, “Honoring, Respecting,
                                                 Revering, Worshiping, and Pleasing the Thus-Gone
                                                 Ones.”</trailer>
                                 </div>
@@ -7352,7 +7355,7 @@
                         </gloss>
                     </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-063-001-680">
+                        <gloss type="term" xml:id="UT22084-063-001-2680">
                             <term type="translationMain">stream enterers</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">srotaāpanna</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyun du zhugs pa</term>
@@ -7368,7 +7371,7 @@
                         </gloss>
                     </item>
                                         <item>
-                        <gloss type="term" xml:id="UT22084-063-001-681">
+                        <gloss type="term" xml:id="UT22084-063-001-2681">
                             <term type="translationMain">once-returners</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">sakṛdāgāmin</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">lan cig phyir ’ong ba</term>
