--- a/translations/kangyur/placeholders/090-008_toh564,988-the_incantation_of_marici.xml
+++ b/translations/kangyur/placeholders/090-008_toh564,988-the_incantation_of_marici.xml
@@ -9,18 +9,20 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">'od zer can gyi gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryamārīcīnāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags ma 'od zer can zhes bya ba'i gzungs/</title>
-                <author role="translatorMain" ref="eft:team-9"/>
-                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
-                <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
-                <consultant role="dharmaMaster" ref="eft:person-40">Chokyi Nyima Rinpoche</consultant>
-                <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
+                <author role="translatorMain" xml:id="UT22084-090-008-1"/>
+                <author role="translatorEng" xml:id="UT22084-090-008-2">Adam Krug</author>
+                <consultant role="projectManager" xml:id="UT22084-090-008-3">Andreas Doctor</consultant>
+                <consultant role="dharmaMaster" xml:id="UT22084-090-008-4">Chokyi Nyima Rinpoche</consultant>
+                <editor role="projectEditor" xml:id="UT22084-090-008-5">Nathaniel Rich</editor>
+                <editor role="copyEditor" xml:id="UT22084-090-008-6">Laura Goetz</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2020</date>
+                <edition>v 0.0.11 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.e">
+            <publicationStmt>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-090-008"/>
                 <date/>
             </publicationStmt>
@@ -44,21 +46,57 @@
                     <idno source-id="O1JC114941JC12751" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-21T09:31:36.213Z" user="admin">21/07/2023 09:31:36</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-24T11:38:36.272Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2020-03-24T11:38:36.272Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-08T15:18:23.639Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2021-03-08T15:18:40.624Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2021-03-08T15:18:56.561Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2022-07-15T14:43:22.16Z" user="line-tofte">2.g</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2022-07-15T14:43:22.16Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2022-07-15T14:44:06.979Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.f" date-time="2023-03-17T09:56:58.357Z" user="line-tofte">2.f</note>
-                <note type="updated" update="text-version" value="0.0.7" date-time="2023-03-17T09:56:58.357Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="2.e" date-time="2023-07-21T09:31:31.904Z" user="line-tofte">2.e</note>
-                <note type="updated" update="text-version" value="0.0.8" date-time="2023-07-21T09:31:31.904Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2020-03-24T11:38:36.272Z" type="text-version" status="0.0.1" xml:id="UT22084-090-008-7">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2020-03-24T11:38:36.272Z" type="translation-status" status="2.h" xml:id="UT22084-090-008-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2021-03-08T15:18:23.639Z" type="text-version" status="0.0.2" xml:id="UT22084-090-008-9">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-03-08T15:18:40.624Z" type="text-version" status="0.0.3" xml:id="UT22084-090-008-10">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-03-08T15:18:56.561Z" type="text-version" status="0.0.4" xml:id="UT22084-090-008-11">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-07-15T14:43:22.16Z" type="translation-status" status="2.g" xml:id="UT22084-090-008-12">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2022-07-15T14:43:22.16Z" type="text-version" status="0.0.5" xml:id="UT22084-090-008-13">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-07-15T14:44:06.979Z" type="text-version" status="0.0.6" xml:id="UT22084-090-008-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-17T09:56:58.357Z" type="translation-status" status="2.f" xml:id="UT22084-090-008-15">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-17T09:56:58.357Z" type="text-version" status="0.0.7" xml:id="UT22084-090-008-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-21T09:31:31.904Z" type="translation-status" status="2.e" xml:id="UT22084-090-008-17">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-21T09:31:31.904Z" type="text-version" status="0.0.8" xml:id="UT22084-090-008-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-21T09:32:19.179Z" type="text-version" status="0.0.9" xml:id="UT22084-090-008-19">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.10" xml:id="UT22084-090-008-20">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-18T08:13:48.324Z" type="translation-status" status="2.d" xml:id="UT22084-090-008-21">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-18T08:13:48.324Z" type="text-version" status="0.0.11" xml:id="UT22084-090-008-22">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
