--- a/translations/kangyur/placeholders/090-009_toh565-the_sovereign_practices_extracted_from_the_tantra_of_mayamarici.xml
+++ b/translations/kangyur/placeholders/090-009_toh565-the_sovereign_practices_extracted_from_the_tantra_of_mayamarici.xml
@@ -9,18 +9,20 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">sgyu ma'i 'od zer can 'byung ba'i rgyud las phyung ba'i rtog pa'i rgyal po/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">māyāmārīcījātatantrād uddhṛtaḥ kalparājo nāma</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">sgyu ma'i 'od zer can 'byung ba'i rgyud las phyung ba'i rtog pa'i rgyal po zhes bya ba/</title>
-                <author role="translatorMain" ref="eft:team-9"/>
-                <author role="translatorEng" ref="eft:person-274">Adam Krug</author>
-                <consultant role="dharmaMaster" ref="eft:person-40">Chokyi Nyima Rinpoche</consultant>
-                <consultant role="projectManager" ref="eft:person-50">Andreas Doctor</consultant>
-                <editor role="projectEditor" ref="eft:person-289">Nathaniel Rich</editor>
+                <author role="translatorMain" xml:id="UT22084-090-009-1"/>
+                <author role="translatorEng" xml:id="UT22084-090-009-2">Adam Krug</author>
+                <consultant role="dharmaMaster" xml:id="UT22084-090-009-3">Chokyi Nyima Rinpoche</consultant>
+                <consultant role="projectManager" xml:id="UT22084-090-009-4">Andreas Doctor</consultant>
+                <editor role="projectEditor" xml:id="UT22084-090-009-5">Nathaniel Rich</editor>
+                <editor role="copyEditor" xml:id="UT22084-090-009-6">Laura Goetz</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2020</date>
+                <edition>v 0.0.13 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.e">
+            <publicationStmt>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-090-009"/>
                 <date/>
             </publicationStmt>
@@ -28,27 +30,70 @@
                 <bibl key="toh565" type="text">
                     <ref>Toh 565</ref>
                     <biblScope>vol.90, ff.158v-159v/169v(pp.314-316 /336)</biblScope>
-                    <location work="UT4CZ5369" count-pages="3">
-                        <volume number="90" start-page="314" end-page="316"/>
+                    <location work="UT4CZ5369" count-pages="17">
+                        <volume number="90" start-page="314" end-page="328"/>
                     </location>
                     <idno parent-id="O1JC114941JC21415" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12298" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-07-21T09:32:54.6Z" user="admin">21/07/2023 09:32:54</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-24T11:39:07.308Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2020-03-24T11:39:07.308Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2021-03-08T15:24:24.546Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2021-03-08T15:24:36.777Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2022-07-15T14:44:56.666Z" user="line-tofte">2.g</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2022-07-15T14:44:56.666Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2022-07-15T14:45:37.176Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="translation-status" value="2.f" date-time="2023-03-17T09:57:59.603Z" user="line-tofte">2.f</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2023-03-17T09:57:59.603Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="translation-status" value="2.e" date-time="2023-07-21T09:32:50.233Z" user="line-tofte">2.e</note>
-                <note type="updated" update="text-version" value="0.0.7" date-time="2023-07-21T09:32:50.233Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2020-03-24T11:39:07.308Z" type="text-version" status="0.0.1" xml:id="UT22084-090-009-7">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2020-03-24T11:39:07.308Z" type="translation-status" status="2.h" xml:id="UT22084-090-009-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2021-03-08T15:24:24.546Z" type="text-version" status="0.0.2" xml:id="UT22084-090-009-9">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-03-08T15:24:36.777Z" type="text-version" status="0.0.3" xml:id="UT22084-090-009-10">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-07-15T14:44:56.666Z" type="translation-status" status="2.g" xml:id="UT22084-090-009-11">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2022-07-15T14:44:56.666Z" type="text-version" status="0.0.4" xml:id="UT22084-090-009-12">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-07-15T14:45:37.176Z" type="text-version" status="0.0.5" xml:id="UT22084-090-009-13">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-17T09:57:59.603Z" type="translation-status" status="2.f" xml:id="UT22084-090-009-14">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-03-17T09:57:59.603Z" type="text-version" status="0.0.6" xml:id="UT22084-090-009-15">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-21T09:32:50.233Z" type="translation-status" status="2.e" xml:id="UT22084-090-009-16">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-21T09:32:50.233Z" type="text-version" status="0.0.7" xml:id="UT22084-090-009-17">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-07-21T09:33:37.48Z" type="text-version" status="0.0.8" xml:id="UT22084-090-009-18">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#john" when="2023-07-24T10:26:20.022Z" type="text-version" status="0.0.9" xml:id="UT22084-090-009-19">
+                    <desc>Auto (update-locations)</desc>
+                </change>
+                <change who="#john" when="2023-07-24T10:27:49.232Z" type="text-version" status="0.0.10" xml:id="UT22084-090-009-20">
+                    <desc>Auto (update-locations)</desc>
+                </change>
+                <change who="#john" when="2023-07-24T10:28:09.957Z" type="text-version" status="0.0.11" xml:id="UT22084-090-009-21">
+                    <desc>Auto (update-locations)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.12" xml:id="UT22084-090-009-22">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-18T08:19:36.34Z" type="translation-status" status="2.d" xml:id="UT22084-090-009-23">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-18T08:19:36.34Z" type="text-version" status="0.0.13" xml:id="UT22084-090-009-24">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
