--- a/translations/kangyur/translations/101-122_toh1066-incantation_of_the_supreme_stem_ornament.xml
+++ b/translations/kangyur/translations/101-122_toh1066-incantation_of_the_supreme_stem_ornament.xml
@@ -24,7 +24,7 @@
         <editor role="projectEditor" xml:id="UT22084-101-122-63">George FitzHerbert</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 0.0.4 <date>2023</date>
+                <edition>v 0.0.5 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -32,7 +32,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
           available to everyone. </publisher>
-        <availability status="2.a">
+        <availability status="2">
           <licence>
             <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
             <p>This work is provided under the protection of a Creative Commons CC BY-NC-ND
@@ -112,6 +112,12 @@
         </change>
                 <change who="#john" when="2023-08-18T09:24:26.512Z" type="text-version" status="0.0.4" xml:id="UT22084-101-122-87">
                     <desc>A few more edits.</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-21T07:23:22.435Z" type="translation-status" status="2" xml:id="UT22084-101-122-88">
+                    <desc>2</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-21T07:23:22.435Z" type="text-version" status="0.0.5" xml:id="UT22084-101-122-89">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
