--- a/translations/kangyur/placeholders/056-001_toh133-the_sutra_on_the_samadhi_in_which_the_buddhas_of_the_present_all_stand_before_one.xml
+++ b/translations/kangyur/placeholders/056-001_toh133-the_sutra_on_the_samadhi_in_which_the_buddhas_of_the_present_all_stand_before_one.xml
@@ -15,11 +15,11 @@
                 <sponsor xml:id="UT22084-056-001-1">Kelvin Lee, Doris Lim, Chang Chen Hsien, Gephel Lim, Ng Ah Chon &amp; all sentient beings</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2023</date>
+                <edition>v 0.0.10 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="4"/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-056-001"/>
             </publicationStmt>
             <sourceDesc>
@@ -63,6 +63,12 @@
                     <desc>4</desc>
                 </change>
                 <change who="#line-tofte" when="2023-08-10T07:18:41.335Z" type="text-version" status="0.0.9" xml:id="UT22084-056-001-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-22T13:58:25.81Z" type="translation-status" status="3" xml:id="UT22084-056-001-12">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-22T13:58:25.81Z" type="text-version" status="0.0.10" xml:id="UT22084-056-001-13">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
