--- a/translations/kangyur/translations/066-008_toh250-the_sutra_on_four_points.xml
+++ b/translations/kangyur/translations/066-008_toh250-the_sutra_on_four_points.xml
@@ -4,33 +4,28 @@
         <teiHeader>
                 <fileDesc>
                         <titleStmt>
-                                <title type="mainTitle" xml:lang="en">The Four Factors</title>
-                                <title type="mainTitle" xml:lang="Bo-Ltn">chos bzhi pa</title>
-                                <title type="mainTitle" xml:lang="bo">ཆོས་བཞི་པ།</title>
-                                <title type="mainTitle" xml:lang="Sa-Ltn">Catur­dharmaka</title>
-                                <title type="longTitle" xml:lang="Bo-Ltn">chos bzhi pa’i mdo</title>
-                                <title type="longTitle" xml:lang="bo">ཆོས་བཞི་པའི་མདོ།</title>
-                                <title type="longTitle" xml:lang="en">The Sūtra on the Four
+                <title type="mainTitle" xml:lang="en">The Four Factors</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Catur­dharmaka</title>
+                <title type="mainTitle" xml:lang="bo">ཆོས་བཞི་པ།</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">chos bzhi pa</title>
+                <title type="longTitle" xml:lang="en">The Sūtra on the Four
                                         Factors</title>
-                                <title type="longTitle" xml:lang="Sa-Ltn">Catur­dharmaka­­sūtra</title>
-                                <title type="otherTitle" xml:lang="zh"/>
-                                <author role="translatorMain" xml:id="UT22084-066-008-64">Translated by Adam
+                <title type="longTitle" xml:lang="Sa-Ltn">Catur­dharmaka­­sūtra</title>
+                <title type="longTitle" xml:lang="bo">ཆོས་བཞི་པའི་མདོ།</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">chos bzhi pa’i mdo</title>
+                <author role="translatorMain" xml:id="UT22084-066-008-64">Translated by Adam
                                         Pearcey<lb/>under the patronage and supervision of 84000:
                                         Translating the Words of the Buddha</author>
-                                <author role="translatorEng" xml:id="UT22084-066-008-65">Adam
-                                        Pearcey</author>
-                                <editor role="projectEditor" xml:id="UT22084-066-008-66">David
-                                        Fiordalis</editor>
-                                <editor role="copyEditor" xml:id="UT22084-066-008-67">Dawn Collins</editor>
-                                <editor role="projectEditor" xml:id="UT22084-066-008-68">Andreas
-                                        Doctor</editor>
-                                <editor role="projectEditor" xml:id="UT22084-066-008-69">Rory
-                                        Lindsay</editor>
-                                <editor role="TEImarkupEditor" xml:id="UT22084-066-008-70">Martina
-                                        Cotter</editor>
-                        </titleStmt>
+                <author role="translatorEng" xml:id="UT22084-066-008-65">Adam Pearcey</author>
+                <editor role="projectEditor" xml:id="UT22084-066-008-66">David Fiordalis</editor>
+                <editor role="copyEditor" xml:id="UT22084-066-008-67">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-066-008-68">Andreas Doctor</editor>
+                <editor role="projectEditor" xml:id="UT22084-066-008-69">Rory Lindsay</editor>
+                <editor role="TEImarkupEditor" xml:id="UT22084-066-008-70">Martina Cotter</editor>
+                <editor role="finalReviewer" xml:id="UT22084-066-008-161">John Canti</editor>
+            </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -182,6 +177,12 @@
                 <change who="#martina-cotter" when="2023-08-14T18:23:31.01Z" type="text-version" status="1.0.0" xml:id="UT22084-066-008-153">
                     <desc>First published version</desc>
                 </change>
+                <change who="#line-tofte" when="2023-08-15T07:25:16.864Z" type="text-version" status="1.0.1" xml:id="UT22084-066-008-162">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#andre" when="2023-08-23T10:43:55.108Z" type="text-version" status="1.0.2" xml:id="UT22084-066-008-163">
+                    <desc>Glossary revised - activated in CG</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
         </teiHeader>
@@ -232,8 +233,8 @@
                                                   Mahāyāna Sūtra on the Four Factors</title> (Toh
                                                 251)<note place="end" xml:id="UT22084-066-008-107">
                                                         Pearcey, Adam. trans., <title xml:lang="en">
-                                <ref target="http://read.84000.co/translation/toh251.html">The 
-                                                                Sūtra on Four Precepts</ref>
+                                <ref target="http://read.84000.co/translation/toh251.html">The Noble
+                                                                Mahāyāna Sūtra on the Four Factors</ref>
                             </title>, Toh 251 (84000:
                                                         Translating the Words of the Buddha, 2023).</note> identifies four
                                                 factors of the path that bodhisattvas must not
@@ -516,7 +517,7 @@
                                                 1973.</bibl>
                                 </div>
                         </div>
-                        <div type="glossary" status="excluded">
+                        <div type="glossary">
                                 <list type="glossary">
                                         <item>
                         <gloss type="place" xml:id="UT22084-066-008-55">
@@ -531,18 +532,13 @@
                         </gloss>
                     </item>
                                         <item>
-                        <gloss type="place" xml:id="UT22084-066-008-56">
+                        <gloss xml:id="UT22084-066-008-56" type="place" mode="match">
                             <term type="translationMain">Jeta Grove</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">jetavana</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rgyal bu rgyal byed kyi tshal</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྒྱལ་བུ་རྒྱལ་བྱེད་ཀྱི་ཚལ།</term>
-                            <note type="definition">
-                                <p>A grove owned by Prince
-                                                  Jeta in Śrāvastī, the capital of the kingdom of
-                                                  Kośala. It was bought by Anāthapiṇḍada and became
-                                                  a monastery. Since the Buddha often stayed there
-                                                  during rainy seasons, it became a setting for many
-                                                  sūtras.</p>
+                            <note type="definition" rend="override">
+                                <p>A grove owned by Prince Jeta in Śrāvastī, the capital of the kingdom of Kośala. It was bought by Anāthapiṇḍada and became a monastery. Since the Buddha often stayed there during rainy seasons, it became a setting for many sūtras.</p>
                             </note>
                         </gloss>
                     </item>
